# opx-alarm

./: .gitreview  Makefile.am  README.md  configure.ac
config/: schema.json
debian/: changelog  control
man/man1/: opx-alm-service.1  opx-show-alms.1
man/man5/: opx-alm-service.5
systemd/: opx-alms.service
